# ssms-gui

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: testing.ipynb
src/: dashboard-prototype.py
src/utils/: old_plots.py  utils.py
